# agentscluster

./: .env.example  .gitignore  README.md  agentsCluster.ps1  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: agents.example.yaml
docs/: api.md  architecture-comparison.md
scripts/: install.ps1  install_optional_deps.ps1  install_worker_deps.ps1  run_tests.ps1
src/agents_cluster/: cli.py  e2e.py
src/agents_cluster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agents_cluster/api/: run_queue.py  server.py
src/agents_cluster/core/: config.py  db.py  doctor.py  env.py  integrations.py  paths.py  simple_yaml.py  time.py  tools.py
src/agents_cluster/orchestrator/: agent_test.py  controller.py  langgraph_controller.py  prompts.py  task_protocol.py
src/agents_cluster/runners/: aider.py  base.py  claude.py  codex.py  direct_llm.py  factory.py  fake.py  openhands.py  subprocess_runner.py
src/agents_cluster/workspace/: git_ops.py  manager.py
tests/: api_smoke.py  doctor_optional_openhands.py  e2e_dry.py  integration_smoke.py  langgraph_smoke.py  planning_tolerance.py  smoke.py
ui/: index.html  package-lock.json  package.json  styles.css  vite.config.js
ui/src/: App.jsx  main.jsx
